--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,1 @@
-<main>
-  <img src="/assets/milhao-logo.png" />
-
-  <div class="controles">
-    <select id="materia" (change)="selectMateria($event)">
-      <option selected disabled>Materia</option>
-      <option
-        *ngFor="let item of controlesSchema?.Materias; index as i"
-        value="{{ i }}"
-      >
-        {{ item }}
-      </option>
-    </select>
-    <select id="nivel" (change)="selectNivel($event)">
-      <option selected disabled>Nivel</option>
-      <option
-        *ngFor="let item of controlesSchema?.Niveis; index as i"
-        value="{{ i }}"
-      >
-        {{ item }}
-      </option>
-    </select>
-    <button
-      (click)="getQuestion()"
-      [disabled]="!materiaSelecionada || !nivelSelecionado"
-    >
-      Requestar
-    </button>
-  </div>
-  <p class="error">{{ errorMsg }}</p>
-
-  <app-pergunta
-    *ngIf="pergunta"
-    [pergunta]="pergunta"
-    (respostaEvent)="respostaEvent($event)"
-  ></app-pergunta>
-</main>
+<app-index></app-index>
